--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,7 +8,7 @@
   display: flex;
   width: 700px;
   height: 800px;
-  margin: 100px auto;
+  margin: 80px auto 0px;
   .panel {
     position: relative;
     width: 600px;
