--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -6,27 +6,22 @@
 
 #app {
   display: flex;
-  width: 700px;
-  height: 800px;
+  justify-content: center;
   margin: 80px auto 0px;
   .panel {
     position: relative;
-    width: 600px;
-    height: 700px;
-    border: 1px solid #999;
+    box-sizing: border-box;
   }
   .tip {
-    width: 300px;
-    height: 700px;
     border: 1px solid #999;
     border-left: none;
     box-sizing: border-box;
     padding-top: 50px;
     .next {
       position: relative;
-      height: 100px;
-      width: 150px;
-      margin: 0 auto;
+      // height: 100px;
+      // width: 150px;
+      // margin: 0 auto;
     }
   }
 }
