--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -8,9 +8,36 @@
   display: flex;
   justify-content: center;
   margin: 80px auto 0px;
+  box-sizing: border-box;
   .panel {
     position: relative;
     box-sizing: border-box;
+    background: #fff;
+    border: 1px solid #000;
+    .mask {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      background: rgba(
+        $color: (
+          #000000
+        ),
+        $alpha: 0.2
+      );
+      z-index: 999;
+      display: none;
+      text-align: center;
+      line-height: 100%;
+      font-size: 30px;
+
+      .msg {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+        width: 100%;
+      }
+    }
   }
   .tip {
     border: 1px solid #999;
@@ -19,14 +46,13 @@
     padding-top: 50px;
     .next {
       position: relative;
-      // height: 100px;
-      // width: 150px;
-      // margin: 0 auto;
+    }
+    .des-wrap {
+      margin-top: 30px;
+      font-size: 14px;
+      color: #666;
+      line-height: 20px;
+      text-align: center;
     }
   }
-}
-
-.btn-wrap {
-  margin-top: 30px;
-  text-align: center;
 }
